css/default.css
/* ... */
.annotation div.data-field.annotation-abstract {
    margin-top: 0.5em;
}
.annotation blockquote.data-field.annotation-abstract {
    margin-top: 1em;
}
.annotation .data-field.annotation-abstract:empty {
    display: none;
}
.annotation .data-field.annotation-abstract:not(blockquote) > .page-description-annotation::before {
    content: "";
    display: block;
    overflow: auto;
    margin: 0.75em 0 0.5em 0;
    border-top: 1px dotted currentColor;
}

/*  Images (such as the ones in Wikipedia annotations).
    */
@media all and (min-width: 650px) {
    .annotation > figure.float-right {
        margin: 0.125em 0 0.125em 1.5em;
        max-width: calc(50% - 1.5em);
        float: right;
    }
}
.annotation figure {
    clear: both;
}
.annotation figure.float-left .image-wrapper,
.annotation figure.float-right .image-wrapper {
    max-width: 100%;
}

.annotation .image-row-wrapper {
    display: flex;
}

.annotation .page-description-annotation {
    font-style: italic;
    margin-bottom: 0.5em;
}

/*  Wikipedia entries.
 */
.annotation.wikipedia-entry .table-wrapper {
    margin: 1.5em 0 1.5em 0;
    clear: both;
}
.annotation.wikipedia-entry .infobox {
    font-size: 0.9em;
}
.annotation.wikipedia-entry .infobox table {
    font-size: 0.935em;
}
.annotation.wikipedia-entry .infobox tbody tr:hover {
    outline: none;
}
.annotation.wikipedia-entry .infobox th[colspan="2"],
.annotation.wikipedia-entry .infobox td[colspan="2"],
.annotation.wikipedia-entry .infobox th.sidebar-title,
.annotation.wikipedia-entry .infobox th.sidebar-heading {
    text-align: center;
}
.annotation.wikipedia-entry .infobox th {
    border-top: 1px solid var(--GW-table-row-horizontal-border-color);
}
.annotation.wikipedia-entry .infobox tr:first-of-type th {
    font-size: 1.25em;
}
.annotation.wikipedia-entry .infobox td:first-child {
    font-weight: bold;
}
.annotation.wikipedia-entry .infobox td ul {
    margin: 0.25em 0;
    padding: 0 0 0 1.5em;
}
.annotation.wikipedia-entry > figure.float-right {
    margin: 0.125em 0 0.75em 1.5em;
}
.annotation.wikipedia-entry #Timeline-row {
    display: flex;
    width: -moz-fit-content;
    width: fit-content;
    margin: 0.25em auto;
}
.annotation.wikipedia-entry th br ~ * {
    font-weight: normal;
    font-size: calc((1 / 1.25) * 1em);
}
.annotation.wikipedia-entry .hatnote {
    margin: 0 0 0.75em 0;
    font-style: italic;
}
.annotation.wikipedia-entry .chemf {
    word-break: break-all;
}
.annotation.wikipedia-entry .side-box {
    border: 1px dotted currentColor;
    float: right;
    padding: 0.5em 0.75em;
    max-width: calc(50% - 2em);
    margin: 0 0 1em 1em;
    overflow: auto;
    position: relative;
}
.annotation.wikipedia-entry .side-box.sister-box ul {
    padding: 0;
    margin: 1em 0 0 0;
}
.annotation.wikipedia-entry .side-box.sister-box ul li::before {
    content: none;
}
.annotation.wikipedia-entry .side-box.sister-box ul .sister-logo {
    margin: 0 0.5em 0 0;
    display: inline-block;
    vertical-align: text-top;
    width: 1.5em;
    text-align: center;
}

/*  Special case for inline math in Wikipedia pop-frames.
    */
.annotation.wikipedia-entry .mwe-math-element {
    display: inline-block;
    height: 1.25em;
    line-height: 1;
    margin: 0;
    vertical-align: bottom;
    padding: 0;
    text-indent: 0;
}
.annotation.wikipedia-entry .mwe-math-element img {
    display: inline-block;
    height: 100%;
}
/*  Ditto, but block math.
 */
.annotation.wikipedia-entry dl .mwe-math-element {
    display: block;
    height: unset;
}
.annotation.wikipedia-entry dl .mwe-math-element img {
    display: block;
}

/* WP wraps references entirely in <cite> elements; <cite> is styled by browsers (Chrome/FF) by default in italics. No one wants their entire reference in italics, so WP resets the font to the default style (whatever that is), and styles italics bits (like book titles) manually. We need to replicate that, or else references sections in our WP popups will be entirely italics! */
.annotation.wikipedia-entry cite,
.annotation.wikipedia-entry dfn {
    font-style: inherit;
}

/*  “Aux links” (backlinks, similars, “see also”, etc.) section of annotations.
 */

.aux-links-append {
    margin-top: 0.5em;
    padding-left: 2px;
    padding-bottom: 0.125em;
}
.aux-links-append + .aux-links-append {
    margin-top: 1em;
}

.TOC + .aux-links-container {
    margin-top: 1em;
}

.aux-links-append > .columns > ul {
    margin-top: 0.5em;
    margin-bottom: 0.25em;
}

.aux-links-append > div > .columns:not(:first-child) {
    margin-top: 1em;
}

/*  “Aux links” in link bibliographies, directory indexes, and other transcluded
    (rather than pop-framed) annotations.
 */

ol.link-bibliography-list-compact {
    --GW-list-left-padding: 2.25em;

    list-style-type: lower-alpha;
}
ol.link-bibliography-list-compact > li::marker {
    font-family: var(--GW-monospaced-font-stack);
    font-size: 0.9em;
}
@media all and (max-width: 649px) {
    ol.link-bibliography-list-compact {
        padding-left: 1.75em;
    }
}

#link-bibliography > ol > li > p + p {
    text-indent: 0;
    margin-top: 0.5em;
}


/****************/
/* X OF THE DAY */
/****************/

/*  Annotation of the day.
 */
#aotd {
    margin-bottom: 2em;
}

/*  Link of the day.
 */

.link-of-the-day {
    --box-size: 4em;
    --box-padding-top: 1em;
    --box-padding-bottom: 3em;

    --box-total-size: calc(var(--box-size) + var(--box-padding-top) + var(--box-padding-bottom));

    --box-horizontal-offset: calc(var(--box-padding-top) * 2.0);

    padding-right: calc(var(--box-horizontal-offset) * 0.5);
}
/* ... */

