Fix for layout bug in Wikipedia annotations

--- a/css/default.css
+++ b/css/default.css
@@ -5219,6 +5219,15 @@ section.highlight-fading::before {
     margin: 0.25em 0;
     padding: 0 0 0 1.5em;
 }
+.annotation.wikipedia-entry .quotebox-title {
+	text-align: center;
+	font-weight: bold;
+	font-size: 1.25em;
+	margin: -0.125em 0 0.25em 0;
+}
+.annotation.wikipedia-entry .quotebox-cite {
+	margin-top: 0.5em;
+}
 .annotation.wikipedia-entry > figure.float-right {
     margin: 0.125em 0 0.75em 1.5em;
 }
